#9 Added/updated enums ConfigType, DocTmplInvitationType, DocTmplPrivacyType, DocTmplQuoteType, DocumentLockSemantics, TaskDirection

--- a/docs/api-reference/CRMScript.NetServer.NSChatSessionEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSChatSessionEntity.yml
@@ -504,7 +504,7 @@ items:
     content: Integer GetStatus()
     parameters: []
     return:
-      type: CRMScript.NetServer.Integer
+      type: CRMScript.Global.Integer
       description: The status for the session. See <xref href=\"CRMScript.NetServer.ChatSessionStatus\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSChatSessionEntity thing;\nInteger status = thing.GetStatus();</code></pre>\n"
