--- a/docs/api-reference/CRMScript.NetServer.NSCustomerCenterConfig.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCustomerCenterConfig.yml
@@ -154,14 +154,14 @@ items:
   nameWithType: NSCustomerCenterConfig.GetType()
   fullName: CRMScript.NetServer.NSCustomerCenterConfig.GetType()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Style</li><li>Enum: 1 = Options</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetType()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: What kind of data is in this row
+      description: What kind of data is in this row. What kind of data is in this row. See <xref href=\"ConfigType\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSCustomerCenterConfig thing;\nInteger type = thing.GetType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSCustomerCenterConfig.GetUpdated()
@@ -331,7 +331,7 @@ items:
     parameters:
     - id: type
       type: CRMScript.Global.Integer
-      description: What kind of data is in this row. See enum type.
+      description: What kind of data is in this row. See <xref href=\"ConfigType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -411,3 +411,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.ConfigType
+  commentId: T:CRMScript.NetServer.ConfigType
+  isExternal: true
+  name: ConfigType
+  nameWithType: ConfigType
+  fullName: CRMScript.NetServer.ConfigType
