--- a/docs/api-reference/CRMScript.NetServer.NSCustomerServiceAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCustomerServiceAgent.yml
@@ -312,14 +312,14 @@ items:
   nameWithType: NSCustomerServiceAgent.EventHandlerExists(Integer)
   fullName: CRMScript.NetServer.NSCustomerServiceAgent.EventHandlerExists(Integer)
   type: Method
-  summary: "\nChecks if an event handler exists\n"
+  summary: "\nChecks if an event handler exists.\n"
   remarks: 
   syntax: 
     content: Bool EventHandlerExists(Integer eventHandlerType)
     parameters:
     - id: eventHandlerType
       type: CRMScript.Global.Integer
-      description: See enum eventHandlerType.
+      description: See <xref href=\"CRMScript.NetServer.EventHandlerType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Bool
       description:
