--- a/docs/api-reference/CRMScript.NetServer.NSDocumentAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDocumentAgent.yml
@@ -2182,7 +2182,7 @@ items:
       description: 
     - id: generatorEncoding
       type: CRMScript.Global.Integer
-      description: See enum generatorEncoding.
+      description: See <xref href=\"GeneratorEncoding\" data-throw-if-not-resolved=\"false\"></xref>
     - id: contactId
       type: CRMScript.Global.Integer
       description: 
@@ -2252,7 +2252,7 @@ items:
       description: 
     - id: generatorEncoding
       type: CRMScript.Global.Integer
-      description: See enum generatorEncoding.
+      description: See <xref href=\"GeneratorEncoding\" data-throw-if-not-resolved=\"false\"></xref>
     - id: customTags
       type: CRMScript.Global.String[]
       description: 
@@ -2308,7 +2308,7 @@ items:
       description: 
     - id: generatorEncoding
       type: CRMScript.Global.Integer
-      description: See enum generatorEncoding.
+      description: See <xref href=\"GeneratorEncoding\" data-throw-if-not-resolved=\"false\"></xref>
     - id: customTags
       type: CRMScript.Global.Map
       description: 
@@ -2444,12 +2444,6 @@ references:
   name: String
   nameWithType: String
   fullName: CRMScript.Global.String
-- uid: CRMScript.Global.String
-  commentId: T:CRMScript.Global.String
-  isExternal: true
-  name: String
-  nameWithType: String
-  fullName: CRMScript.Global.String
 - uid: CRMScript.NetServer.NSReturnInfo
   commentId: T:CRMScript.NetServer.NSReturnInfo
   isExternal: true
@@ -2538,12 +2532,6 @@ references:
   - name: '[]'
     nameWithType: '[]'
     fullName: '[]'
-- uid: CRMScript.Global.Integer
-  commentId: T:CRMScript.Global.Integer
-  isExternal: true
-  name: Integer
-  nameWithType: Integer
-  fullName: CRMScript.Global.Integer
 - uid: CRMScript.NetServer.NSDocument
   commentId: T:CRMScript.NetServer.NSDocument
   isExternal: true
@@ -2602,9 +2590,9 @@ references:
   name: NSTemplateInfo
   nameWithType: NSTemplateInfo
   fullName: CRMScript.NetServer.NSTemplateInfo
-- uid: CRMScript.Global.Void
-  commentId: T:CRMScript.Global.Void
+- uid: CRMScript.NetServer.GeneratorEncoding
+  commentId: T:CRMScript.NetServer.GeneratorEncoding
   isExternal: true
-  name: Void
-  nameWithType: Void
-  fullName: CRMScript.Global.Void
+  name: GeneratorEncoding
+  nameWithType: GeneratorEncoding
+  fullName: CRMScript.NetServer.GeneratorEncoding
