--- a/docs/api-reference/CRMScript.NetServer.NSDocumentEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDocumentEntity.yml
@@ -445,14 +445,14 @@ items:
   nameWithType: NSDocumentEntity.GetLockSemantics()
   fullName: CRMScript.NetServer.NSDocumentEntity.GetLockSemantics()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = None</li><li>Enum: 1 = Locking</li><li>Enum: 2 = Versioning</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetLockSemantics()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description:
+      description: See <xref href=\"DocumentLockSemantics\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSDocumentEntity thing;\nInteger lockSemantics = thing.GetLockSemantics();</code></pre>\n"
 - uid: CRMScript.NetServer.NSDocumentEntity.GetName()
@@ -1162,7 +1162,7 @@ items:
     parameters:
     - id: lockSemantics
       type: CRMScript.Global.Integer
-      description: See enum lockSemantics.
+      description: See <xref href=\"DocumentLockSemantics\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1639,3 +1639,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.DocumentLockSemantics
+  commentId: T:CRMScript.NetServer.DocumentLockSemantics
+  isExternal: true
+  name: DocumentLockSemantics
+  nameWithType: DocumentLockSemantics
+  fullName: CRMScript.NetServer.DocumentLockSemantics
