--- a/docs/api-reference/CRMScript.NetServer.NSTaskListItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTaskListItem.yml
@@ -124,14 +124,14 @@ items:
   nameWithType: NSTaskListItem.GetDirection()
   fullName: CRMScript.NetServer.NSTaskListItem.GetDirection()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = Incoming</li><li>Enum: 2 = Outgoing</li><li>Enum: 3 = SaintAll</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetDirection()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: 1 = incoming, 2 = outgoing, see EAppntDirection
+      description: 1 = incoming, 2 = outgoing. See <xref href=\"TaskDirection\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSTaskListItem thing;\nInteger direction = thing.GetDirection();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTaskListItem.GetIntentId()
@@ -397,7 +397,7 @@ items:
     parameters:
     - id: direction
       type: CRMScript.Global.Integer
-      description: 1 = incoming, 2 = outgoing, see EAppntDirection
+      description: 1 = incoming, 2 = outgoing. See <xref href=\"TaskDirection\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -635,3 +635,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.TaskDirection
+  commentId: T:CRMScript.NetServer.TaskDirection
+  isExternal: true
+  name: TaskDirection
+  nameWithType: TaskDirection
+  fullName: CRMScript.NetServer.TaskDirection
