--- a/docs/api-reference/CRMScript.NetServer.generatorEncoding.yml
+++ b/docs/api-reference/CRMScript.NetServer.generatorEncoding.yml
@@ -1,216 +1,217 @@
 ### YamlMime:ManagedReference
 items:
-- uid: CRMScript.NetServer.generatorEncoding
-  commentId: T:CRMScript.NetServer.generatorEncoding
-  id: generatorEncoding
+- uid: CRMScript.NetServer.GeneratorEncoding
+  # Same as SuperOffice.Data.GeneratorEncoding
+  commentId: T:CRMScript.NetServer.GeneratorEncoding
+  id: GeneratorEncoding
   langs:
   - crmscript
   children:
-  - CRMScript.NetServer.generatorEncoding.Text
-  - CRMScript.NetServer.generatorEncoding.Html
-  - CRMScript.NetServer.generatorEncoding.Xml
-  - CRMScript.NetServer.generatorEncoding.MsWord
-  - CRMScript.NetServer.generatorEncoding.MsExcel
-  - CRMScript.NetServer.generatorEncoding.MsPowerpoint
-  - CRMScript.NetServer.generatorEncoding.MsOffice2007
-  - CRMScript.NetServer.generatorEncoding.MsOffice2007Xml
-  - CRMScript.NetServer.generatorEncoding.Url
-  - CRMScript.NetServer.generatorEncoding.UrlUnicode
-  - CRMScript.NetServer.generatorEncoding.Pdf
-  - CRMScript.NetServer.generatorEncoding.Mime
-  - CRMScript.NetServer.generatorEncoding.OpenDocument
-  - CRMScript.NetServer.generatorEncoding.OpenDocumentXml
-  name: generatorEncoding
-  nameWithType: generatorEncoding
-  fullName: CRMScript.NetServer.generatorEncoding
+  - CRMScript.NetServer.GeneratorEncoding.Text
+  - CRMScript.NetServer.GeneratorEncoding.Html
+  - CRMScript.NetServer.GeneratorEncoding.Xml
+  - CRMScript.NetServer.GeneratorEncoding.MsWord
+  - CRMScript.NetServer.GeneratorEncoding.MsExcel
+  - CRMScript.NetServer.GeneratorEncoding.MsPowerpoint
+  - CRMScript.NetServer.GeneratorEncoding.MsOffice2007
+  - CRMScript.NetServer.GeneratorEncoding.MsOffice2007Xml
+  - CRMScript.NetServer.GeneratorEncoding.Url
+  - CRMScript.NetServer.GeneratorEncoding.UrlUnicode
+  - CRMScript.NetServer.GeneratorEncoding.Pdf
+  - CRMScript.NetServer.GeneratorEncoding.Mime
+  - CRMScript.NetServer.GeneratorEncoding.OpenDocument
+  - CRMScript.NetServer.GeneratorEncoding.OpenDocumentXml
+  name: GeneratorEncoding
+  nameWithType: GeneratorEncoding
+  fullName: CRMScript.NetServer.GeneratorEncoding
   type: Enum
   summary: 
-- uid: CRMScript.NetServer.generatorEncoding.Text
-  commentId: F:CRMScript.NetServer.generatorEncoding.Text
-  id: generatorEncoding.Text
+- uid: CRMScript.NetServer.GeneratorEncoding.Text
+  commentId: F:CRMScript.NetServer.GeneratorEncoding.Text
+  id: GeneratorEncoding.Text
   langs:
   - crmscript
-  name: generatorEncoding.Text
-  nameWithType: generatorEncoding.Text
-  fullName: CRMScript.NetServer.generatorEncoding.Text
+  name: GeneratorEncoding.Text
+  nameWithType: GeneratorEncoding.Text
+  fullName: CRMScript.NetServer.GeneratorEncoding.Text
   type: Field
-  summary: "\n0: Text\n"
+  summary: "\n0: Plain text document.\n"
   syntax: 
     content: Text = 0
-    type: CRMScript.NetServer.generatorEncoding
-- uid: CRMScript.NetServer.generatorEncoding.Html
-  commentId: F:CRMScript.NetServer.generatorEncoding.Html
-  id: generatorEncoding.Html
+    type: CRMScript.NetServer.GeneratorEncoding
+- uid: CRMScript.NetServer.GeneratorEncoding.Html
+  commentId: F:CRMScript.NetServer.GeneratorEncoding.Html
+  id: GeneratorEncoding.Html
   langs:
   - crmscript
-  name: generatorEncoding.Html
-  nameWithType: generatorEncoding.Html
-  fullName: CRMScript.NetServer.generatorEncoding.Html
+  name: GeneratorEncoding.Html
+  nameWithType: GeneratorEncoding.Html
+  fullName: CRMScript.NetServer.GeneratorEncoding.Html
   type: Field
-  summary: "\n1: Html\n"
+  summary: "\n1: HTML-encoded document, it is not strictly parsed.\n"
   syntax: 
     content: Html = 1
-    type: CRMScript.NetServer.generatorEncoding
-- uid: CRMScript.NetServer.generatorEncoding.Xml
-  commentId: F:CRMScript.NetServer.generatorEncoding.Xml
-  id: generatorEncoding.Xml
+    type: CRMScript.NetServer.GeneratorEncoding
+- uid: CRMScript.NetServer.GeneratorEncoding.Xml
+  commentId: F:CRMScript.NetServer.GeneratorEncoding.Xml
+  id: GeneratorEncoding.Xml
   langs:
   - crmscript
-  name: generatorEncoding.Xml
-  nameWithType: generatorEncoding.Xml
-  fullName: CRMScript.NetServer.generatorEncoding.Xml
+  name: GeneratorEncoding.Xml
+  nameWithType: GeneratorEncoding.Xml
+  fullName: CRMScript.NetServer.GeneratorEncoding.Xml
   type: Field
-  summary: "\n2: Xml\n"
+  summary: "\n2: XML document, it is not strictly parsed\n"
   syntax: 
     content: Xml = 2
-    type: CRMScript.NetServer.generatorEncoding
-- uid: CRMScript.NetServer.generatorEncoding.MsWord
-  commentId: F:CRMScript.NetServer.generatorEncoding.MsWord
-  id: generatorEncoding.MsWord
+    type: CRMScript.NetServer.GeneratorEncoding
+- uid: CRMScript.NetServer.GeneratorEncoding.MsWord
+  commentId: F:CRMScript.NetServer.GeneratorEncoding.MsWord
+  id: GeneratorEncoding.MsWord
   langs:
   - crmscript
-  name: generatorEncoding.MsWord
-  nameWithType: generatorEncoding.MsWord
-  fullName: CRMScript.NetServer.generatorEncoding.MsWord
+  name: GeneratorEncoding.MsWord
+  nameWithType: GeneratorEncoding.MsWord
+  fullName: CRMScript.NetServer.GeneratorEncoding.MsWord
   type: Field
-  summary: "\n3: MsWord\n"
+  summary: "\n3: Microsoft Word document.\n"
   syntax: 
     content: MsWord = 3
-    type: CRMScript.NetServer.generatorEncoding
-- uid: CRMScript.NetServer.generatorEncoding.MsExcel
-  commentId: F:CRMScript.NetServer.generatorEncoding.MsExcel
-  id: generatorEncoding.MsExcel
+    type: CRMScript.NetServer.GeneratorEncoding
+- uid: CRMScript.NetServer.GeneratorEncoding.MsExcel
+  commentId: F:CRMScript.NetServer.GeneratorEncoding.MsExcel
+  id: GeneratorEncoding.MsExcel
   langs:
   - crmscript
-  name: generatorEncoding.MsExcel
-  nameWithType: generatorEncoding.MsExcel
-  fullName: CRMScript.NetServer.generatorEncoding.MsExcel
+  name: GeneratorEncoding.MsExcel
+  nameWithType: GeneratorEncoding.MsExcel
+  fullName: CRMScript.NetServer.GeneratorEncoding.MsExcel
   type: Field
-  summary: "\n4: MsExcel\n"
+  summary: "\n4: Microsoft Excel document.\n"
   syntax: 
     content: MsExcel = 4
-    type: CRMScript.NetServer.generatorEncoding
-- uid: CRMScript.NetServer.generatorEncoding.MsPowerpoint
-  commentId: F:CRMScript.NetServer.generatorEncoding.MsPowerpoint
-  id: generatorEncoding.MsPowerpoint
+    type: CRMScript.NetServer.GeneratorEncoding
+- uid: CRMScript.NetServer.GeneratorEncoding.MsPowerpoint
+  commentId: F:CRMScript.NetServer.GeneratorEncoding.MsPowerpoint
+  id: GeneratorEncoding.MsPowerpoint
   langs:
   - crmscript
-  name: generatorEncoding.MsPowerpoint
-  nameWithType: generatorEncoding.MsPowerpoint
-  fullName: CRMScript.NetServer.generatorEncoding.MsPowerpoint
+  name: GeneratorEncoding.MsPowerpoint
+  nameWithType: GeneratorEncoding.MsPowerpoint
+  fullName: CRMScript.NetServer.GeneratorEncoding.MsPowerpoint
   type: Field
-  summary: "\n5: MsPowerpoint\n"
+  summary: "\n5: Microsoft Powerpoint document\n"
   syntax: 
     content: MsPowerpoint = 5
-    type: CRMScript.NetServer.generatorEncoding
-- uid: CRMScript.NetServer.generatorEncoding.MsOffice2007
-  commentId: F:CRMScript.NetServer.generatorEncoding.MsOffice2007
-  id: generatorEncoding.MsOffice2007
+    type: CRMScript.NetServer.GeneratorEncoding
+- uid: CRMScript.NetServer.GeneratorEncoding.MsOffice2007
+  commentId: F:CRMScript.NetServer.GeneratorEncoding.MsOffice2007
+  id: GeneratorEncoding.MsOffice2007
   langs:
   - crmscript
-  name: generatorEncoding.MsOffice2007
-  nameWithType: generatorEncoding.MsOffice2007
-  fullName: CRMScript.NetServer.generatorEncoding.MsOffice2007
+  name: GeneratorEncoding.MsOffice2007
+  nameWithType: GeneratorEncoding.MsOffice2007
+  fullName: CRMScript.NetServer.GeneratorEncoding.MsOffice2007
   type: Field
-  summary: "\n6: MsOffice2007\n"
+  summary: "\n6: Microsoft Office documents zipped (Office 2007)\n"
   syntax: 
     content: MsOffice2007 = 6
-    type: CRMScript.NetServer.generatorEncoding
-- uid: CRMScript.NetServer.generatorEncoding.MsOffice2007Xml
-  commentId: F:CRMScript.NetServer.generatorEncoding.MsOffice2007Xml
-  id: generatorEncoding.MsOffice2007Xml
+    type: CRMScript.NetServer.GeneratorEncoding
+- uid: CRMScript.NetServer.GeneratorEncoding.MsOffice2007Xml
+  commentId: F:CRMScript.NetServer.GeneratorEncoding.MsOffice2007Xml
+  id: GeneratorEncoding.MsOffice2007Xml
   langs:
   - crmscript
-  name: generatorEncoding.MsOffice2007Xml
-  nameWithType: generatorEncoding.MsOffice2007Xml
-  fullName: CRMScript.NetServer.generatorEncoding.MsOffice2007Xml
+  name: GeneratorEncoding.MsOffice2007Xml
+  nameWithType: GeneratorEncoding.MsOffice2007Xml
+  fullName: CRMScript.NetServer.GeneratorEncoding.MsOffice2007Xml
   type: Field
-  summary: "\n7: MsOffice2007Xml\n"
+  summary: "\n7: Microsoft Office XML documents (content of zipped x files)\n"
   syntax: 
     content: MsOffice2007Xml = 7
-    type: CRMScript.NetServer.generatorEncoding
-- uid: CRMScript.NetServer.generatorEncoding.Url
-  commentId: F:CRMScript.NetServer.generatorEncoding.Url
-  id: generatorEncoding.Url
+    type: CRMScript.NetServer.GeneratorEncoding
+- uid: CRMScript.NetServer.GeneratorEncoding.Url
+  commentId: F:CRMScript.NetServer.GeneratorEncoding.Url
+  id: GeneratorEncoding.Url
   langs:
   - crmscript
-  name: generatorEncoding.Url
-  nameWithType: generatorEncoding.Url
-  fullName: CRMScript.NetServer.generatorEncoding.Url
+  name: GeneratorEncoding.Url
+  nameWithType: GeneratorEncoding.Url
+  fullName: CRMScript.NetServer.GeneratorEncoding.Url
   type: Field
-  summary: "\n8: Url\n"
+  summary: "\n8: The tags result are URL-encoded (ansi), the source itself is treated as plain text.\n"
   syntax: 
     content: Url = 8
-    type: CRMScript.NetServer.generatorEncoding
-- uid: CRMScript.NetServer.generatorEncoding.UrlUnicode
-  commentId: F:CRMScript.NetServer.generatorEncoding.UrlUnicode
-  id: generatorEncoding.UrlUnicode
+    type: CRMScript.NetServer.GeneratorEncoding
+- uid: CRMScript.NetServer.GeneratorEncoding.UrlUnicode
+  commentId: F:CRMScript.NetServer.GeneratorEncoding.UrlUnicode
+  id: GeneratorEncoding.UrlUnicode
   langs:
   - crmscript
-  name: generatorEncoding.UrlUnicode
-  nameWithType: generatorEncoding.UrlUnicode
-  fullName: CRMScript.NetServer.generatorEncoding.UrlUnicode
+  name: GeneratorEncoding.UrlUnicode
+  nameWithType: GeneratorEncoding.UrlUnicode
+  fullName: CRMScript.NetServer.GeneratorEncoding.UrlUnicode
   type: Field
-  summary: "\n9: UrlUnicode\n"
+  summary: "\n9: The tags result are URL-encoded (unicode), the source itself is treated as plain text.\n"
   syntax: 
     content: UrlUnicode = 9
-    type: CRMScript.NetServer.generatorEncoding
-- uid: CRMScript.NetServer.generatorEncoding.Pdf
-  commentId: F:CRMScript.NetServer.generatorEncoding.Pdf
-  id: generatorEncoding.Pdf
+    type: CRMScript.NetServer.GeneratorEncoding
+- uid: CRMScript.NetServer.GeneratorEncoding.Pdf
+  commentId: F:CRMScript.NetServer.GeneratorEncoding.Pdf
+  id: GeneratorEncoding.Pdf
   langs:
   - crmscript
-  name: generatorEncoding.Pdf
-  nameWithType: generatorEncoding.Pdf
-  fullName: CRMScript.NetServer.generatorEncoding.Pdf
+  name: GeneratorEncoding.Pdf
+  nameWithType: GeneratorEncoding.Pdf
+  fullName: CRMScript.NetServer.GeneratorEncoding.Pdf
   type: Field
-  summary: "\n10: Pdf\n"
+  summary: "\n10: Adobe PDF format\n"
   syntax: 
     content: Pdf = 10
-    type: CRMScript.NetServer.generatorEncoding
-- uid: CRMScript.NetServer.generatorEncoding.Mime
-  commentId: F:CRMScript.NetServer.generatorEncoding.Mime
-  id: generatorEncoding.Mime
+    type: CRMScript.NetServer.GeneratorEncoding
+- uid: CRMScript.NetServer.GeneratorEncoding.Mime
+  commentId: F:CRMScript.NetServer.GeneratorEncoding.Mime
+  id: GeneratorEncoding.Mime
   langs:
   - crmscript
-  name: generatorEncoding.Mime
-  nameWithType: generatorEncoding.Mime
-  fullName: CRMScript.NetServer.generatorEncoding.Mime
+  name: GeneratorEncoding.Mime
+  nameWithType: GeneratorEncoding.Mime
+  fullName: CRMScript.NetServer.GeneratorEncoding.Mime
   type: Field
-  summary: "\n11: Mime\n"
+  summary: "\n11: RFC822 Mime-content. Handles the actual mime part, but leaves a normal Text-generator to handle the actual content embedded within the MIME-layers.\n"
   syntax: 
     content: Mime = 11
-    type: CRMScript.NetServer.generatorEncoding
-- uid: CRMScript.NetServer.generatorEncoding.OpenDocument
-  commentId: F:CRMScript.NetServer.generatorEncoding.OpenDocument
-  id: generatorEncoding.OpenDocument
+    type: CRMScript.NetServer.GeneratorEncoding
+- uid: CRMScript.NetServer.GeneratorEncoding.OpenDocument
+  commentId: F:CRMScript.NetServer.GeneratorEncoding.OpenDocument
+  id: GeneratorEncoding.OpenDocument
   langs:
   - crmscript
-  name: generatorEncoding.OpenDocument
-  nameWithType: generatorEncoding.OpenDocument
-  fullName: CRMScript.NetServer.generatorEncoding.OpenDocument
+  name: GeneratorEncoding.OpenDocument
+  nameWithType: GeneratorEncoding.OpenDocument
+  fullName: CRMScript.NetServer.GeneratorEncoding.OpenDocument
   type: Field
-  summary: "\n12: OpenDocument\n"
+  summary: "\n12: OpenOffice/LibreOffice documents (zipped)\n"
   syntax: 
     content: OpenDocument = 12
-    type: CRMScript.NetServer.generatorEncoding
-- uid: CRMScript.NetServer.generatorEncoding.OpenDocumentXml
-  commentId: F:CRMScript.NetServer.generatorEncoding.OpenDocumentXml
-  id: generatorEncoding.OpenDocumentXml
+    type: CRMScript.NetServer.GeneratorEncoding
+- uid: CRMScript.NetServer.GeneratorEncoding.OpenDocumentXml
+  commentId: F:CRMScript.NetServer.GeneratorEncoding.OpenDocumentXml
+  id: GeneratorEncoding.OpenDocumentXml
   langs:
   - crmscript
-  name: generatorEncoding.OpenDocumentXml
-  nameWithType: generatorEncoding.OpenDocumentXml
-  fullName: CRMScript.NetServer.generatorEncoding.OpenDocumentXml
+  name: GeneratorEncoding.OpenDocumentXml
+  nameWithType: GeneratorEncoding.OpenDocumentXml
+  fullName: CRMScript.NetServer.GeneratorEncoding.OpenDocumentXml
   type: Field
-  summary: "\n13: OpenDocumentXml\n"
+  summary: "\n13: OpenOffice/LibreOffice documents (contents of zipped files)\n"
   syntax: 
     content: OpenDocumentXml = 13
-    type: CRMScript.NetServer.generatorEncoding
+    type: CRMScript.NetServer.GeneratorEncoding
 references:
-- uid: CRMScript.NetServer.generatorEncoding
-  commentId: T:CRMScript.NetServer.generatorEncoding
+- uid: CRMScript.NetServer.GeneratorEncoding
+  commentId: T:CRMScript.NetServer.GeneratorEncoding
   isExternal: true
-  name: generatorEncoding
-  nameWithType: generatorEncoding
-  fullName: CRMScript.NetServer.generatorEncoding
+  name: GeneratorEncoding
+  nameWithType: GeneratorEncoding
+  fullName: CRMScript.NetServer.GeneratorEncoding
