--- a/docs/api-reference/CRMScript.NetServer.senderEmailMode.yml
+++ b/docs/api-reference/CRMScript.NetServer.senderEmailMode.yml
@@ -1,76 +1,77 @@
 ### YamlMime:ManagedReference
 items:
-- uid: CRMScript.NetServer.senderEmailMode
-  commentId: T:CRMScript.NetServer.senderEmailMode
-  id: senderEmailMode
+- uid: CRMScript.NetServer.SenderMailMode
+  # Same as SuperOffice.Data.SenderMailMode
+  commentId: T:CRMScript.NetServer.SenderMailMode
+  id: SenderMailMode
   langs:
   - crmscript
   children:
-  - CRMScript.NetServer.senderEmailMode.UseDefaultSender
-  - CRMScript.NetServer.senderEmailMode.UseOurContact
-  - CRMScript.NetServer.senderEmailMode.UseSupportContact
-  - CRMScript.NetServer.senderEmailMode.UseLoggedInUser
-  name: senderEmailMode
-  nameWithType: senderEmailMode
-  fullName: CRMScript.NetServer.senderEmailMode
+  - CRMScript.NetServer.SenderMailMode.UseDefaultSender
+  - CRMScript.NetServer.SenderMailMode.UseOurContact
+  - CRMScript.NetServer.SenderMailMode.UseSupportContact
+  - CRMScript.NetServer.SenderMailMode.UseLoggedInUser
+  name: SenderMailMode
+  nameWithType: SenderMailMode
+  fullName: CRMScript.NetServer.SenderMailMode
   type: Enum
-  summary: 
-- uid: CRMScript.NetServer.senderEmailMode.UseDefaultSender
-  commentId: F:CRMScript.NetServer.senderEmailMode.UseDefaultSender
-  id: senderEmailMode.UseDefaultSender
+  summary: "\nSender email mode\n"
+- uid: CRMScript.NetServer.SenderMailMode.UseDefaultSender
+  commentId: F:CRMScript.NetServer.SenderMailMode.UseDefaultSender
+  id: SenderMailMode.UseDefaultSender
   langs:
   - crmscript
-  name: senderEmailMode.UseDefaultSender
-  nameWithType: senderEmailMode.UseDefaultSender
-  fullName: CRMScript.NetServer.senderEmailMode.UseDefaultSender
+  name: SenderMailMode.UseDefaultSender
+  nameWithType: SenderMailMode.UseDefaultSender
+  fullName: CRMScript.NetServer.SenderMailMode.UseDefaultSender
   type: Field
-  summary: "\n0: UseDefaultSender\n"
+  summary: "\n0: Use default sender, saved in template SenderEmailAddress\n"
   syntax: 
     content: UseDefaultSender = 0
-    type: CRMScript.NetServer.senderEmailMode
-- uid: CRMScript.NetServer.senderEmailMode.UseOurContact
-  commentId: F:CRMScript.NetServer.senderEmailMode.UseOurContact
-  id: senderEmailMode.UseOurContact
+    type: CRMScript.NetServer.SenderMailMode
+- uid: CRMScript.NetServer.SenderMailMode.UseOurContact
+  commentId: F:CRMScript.NetServer.SenderMailMode.UseOurContact
+  id: SenderMailMode.UseOurContact
   langs:
   - crmscript
-  name: senderEmailMode.UseOurContact
-  nameWithType: senderEmailMode.UseOurContact
-  fullName: CRMScript.NetServer.senderEmailMode.UseOurContact
+  name: SenderMailMode.UseOurContact
+  nameWithType: SenderMailMode.UseOurContact
+  fullName: CRMScript.NetServer.SenderMailMode.UseOurContact
   type: Field
-  summary: "\n1: UseOurContact\n"
+  summary: "\n1: Use persons our contact email address\n"
   syntax: 
     content: UseOurContact = 1
-    type: CRMScript.NetServer.senderEmailMode
-- uid: CRMScript.NetServer.senderEmailMode.UseSupportContact
-  commentId: F:CRMScript.NetServer.senderEmailMode.UseSupportContact
-  id: senderEmailMode.UseSupportContact
+    type: CRMScript.NetServer.SenderMailMode
+- uid: CRMScript.NetServer.SenderMailMode.UseSupportContact
+  commentId: F:CRMScript.NetServer.SenderMailMode.UseSupportContact
+  id: SenderMailMode.UseSupportContact
   langs:
   - crmscript
-  name: senderEmailMode.UseSupportContact
-  nameWithType: senderEmailMode.UseSupportContact
-  fullName: CRMScript.NetServer.senderEmailMode.UseSupportContact
+  name: SenderMailMode.UseSupportContact
+  nameWithType: SenderMailMode.UseSupportContact
+  fullName: CRMScript.NetServer.SenderMailMode.UseSupportContact
   type: Field
-  summary: "\n2: UseSupportContact\n"
+  summary: "\n2: Use persons support contact.\n"
   syntax: 
     content: UseSupportContact = 2
-    type: CRMScript.NetServer.senderEmailMode
-- uid: CRMScript.NetServer.senderEmailMode.UseLoggedInUser
-  commentId: F:CRMScript.NetServer.senderEmailMode.UseLoggedInUser
-  id: senderEmailMode.UseLoggedInUser
+    type: CRMScript.NetServer.SenderMailMode
+- uid: CRMScript.NetServer.SenderMailMode.UseLoggedInUser
+  commentId: F:CRMScript.NetServer.SenderMailMode.UseLoggedInUser
+  id: SenderMailMode.UseLoggedInUser
   langs:
   - crmscript
-  name: senderEmailMode.UseLoggedInUser
-  nameWithType: senderEmailMode.UseLoggedInUser
-  fullName: CRMScript.NetServer.senderEmailMode.UseLoggedInUser
+  name: SenderMailMode.UseLoggedInUser
+  nameWithType: SenderMailMode.UseLoggedInUser
+  fullName: CRMScript.NetServer.SenderMailMode.UseLoggedInUser
   type: Field
-  summary: "\n3: UseLoggedInUser\n"
+  summary: "\n3: Use logged in user.\n"
   syntax: 
     content: UseLoggedInUser = 3
-    type: CRMScript.NetServer.senderEmailMode
+    type: CRMScript.NetServer.SenderMailMode
 references:
-- uid: CRMScript.NetServer.senderEmailMode
-  commentId: T:CRMScript.NetServer.senderEmailMode
+- uid: CRMScript.NetServer.SenderMailMode
+  commentId: T:CRMScript.NetServer.SenderMailMode
   isExternal: true
-  name: senderEmailMode
-  nameWithType: senderEmailMode
-  fullName: CRMScript.NetServer.senderEmailMode
+  name: SenderMailMode
+  nameWithType: SenderMailMode
+  fullName: CRMScript.NetServer.SenderMailMode
