--- a/docs/api-reference/CRMScript.NetServer.yml
+++ b/docs/api-reference/CRMScript.NetServer.yml
@@ -34,6 +34,7 @@ items:
   - CRMScript.NetServer.children
   - CRMScript.NetServer.closingStatus
   - CRMScript.NetServer.colorIndex
+  - CRMScript.NetServer.ConfigType
   - CRMScript.NetServer.ContactAction
   - CRMScript.NetServer.ContactSourceType
   - CRMScript.NetServer.copyMembers
@@ -45,6 +46,10 @@ items:
   - CRMScript.NetServer.description
   - CRMScript.NetServer.designtype
   - CRMScript.NetServer.destination
+  - CRMScript.NetServer.DocTmplInvitationType
+  - CRMScript.NetServer.DocTmplPrivacyType
+  - CRMScript.NetServer.DocTmplQuoteType
+  - CRMScript.NetServer.DocumentLockSemantics
   - CRMScript.NetServer.OrderBySortType
   - CRMScript.NetServer.displayType
   - CRMScript.NetServer.domain
@@ -60,15 +65,13 @@ items:
   - CRMScript.NetServer.fieldLineNo
   - CRMScript.NetServer.fieldType
   - CRMScript.NetServer.freeTextOperator
-  - CRMScript.NetServer.generatorEncoding
-  - CRMScript.NetServer.invitationDocType
+  - CRMScript.NetServer.GeneratorEncoding
   - CRMScript.NetServer.InvitationStatus
   - CRMScript.NetServer.isIndexed
   - CRMScript.NetServer.justification
   - CRMScript.NetServer.languageId
   - CRMScript.NetServer.level
   - CRMScript.NetServer.LicenseStatus
-  - CRMScript.NetServer.lockSemantics
   - CRMScript.NetServer.mailMergeDeliveryType
   - CRMScript.NetServer.maxLevel
   - CRMScript.NetServer.messageCategory
@@ -447,9 +450,7 @@ items:
   - CRMScript.NetServer.platform
   - CRMScript.NetServer.prefLevel
   - CRMScript.NetServer.priority
-  - CRMScript.NetServer.privacyDocType
   - CRMScript.NetServer.publishType
-  - CRMScript.NetServer.quoteDocType
   - CRMScript.NetServer.rankedFieldsIds
   - CRMScript.NetServer.readStatus
   - CRMScript.NetServer.recaptchaMode
@@ -467,7 +468,7 @@ items:
   - CRMScript.NetServer.searchModeLastname
   - CRMScript.NetServer.selectionType
   - CRMScript.NetServer.selectionUnionType
-  - CRMScript.NetServer.senderEmailMode
+  - CRMScript.NetServer.SenderMailMode
   - CRMScript.NetServer.serverType
   - CRMScript.NetServer.ShowState
   - CRMScript.NetServer.singleWordOperator
@@ -1241,24 +1242,24 @@ references:
   name: NSDocumentAgent
   nameWithType: NSDocumentAgent
   fullName: CRMScript.NetServer.NSDocumentAgent
-- uid: CRMScript.NetServer.generatorEncoding
-  commentId: T:CRMScript.NetServer.generatorEncoding
+- uid: CRMScript.NetServer.GeneratorEncoding
+  commentId: T:CRMScript.NetServer.GeneratorEncoding
   isExternal: true
-  name: generatorEncoding
-  nameWithType: generatorEncoding
-  fullName: CRMScript.NetServer.generatorEncoding
+  name: GeneratorEncoding
+  nameWithType: GeneratorEncoding
+  fullName: CRMScript.NetServer.GeneratorEncoding
 - uid: CRMScript.NetServer.NSDocumentEntity
   commentId: T:CRMScript.NetServer.NSDocumentEntity
   isExternal: true
   name: NSDocumentEntity
   nameWithType: NSDocumentEntity
   fullName: CRMScript.NetServer.NSDocumentEntity
-- uid: CRMScript.NetServer.lockSemantics
-  commentId: T:CRMScript.NetServer.lockSemantics
+- uid: CRMScript.NetServer.DocumentLockSemantics
+  commentId: T:CRMScript.NetServer.DocumentLockSemantics
   isExternal: true
-  name: lockSemantics
-  nameWithType: lockSemantics
-  fullName: CRMScript.NetServer.lockSemantics
+  name: DocumentLockSemantics
+  nameWithType: DocumentLockSemantics
+  fullName: CRMScript.NetServer.DocumentLockSemantics
 - uid: CRMScript.NetServer.NSDocumentPreview
   commentId: T:CRMScript.NetServer.NSDocumentPreview
   isExternal: true
@@ -1271,36 +1272,36 @@ references:
   name: NSDocumentTemplate
   nameWithType: NSDocumentTemplate
   fullName: CRMScript.NetServer.NSDocumentTemplate
-- uid: CRMScript.NetServer.quoteDocType
-  commentId: T:CRMScript.NetServer.quoteDocType
+- uid: CRMScript.NetServer.DocTmplQuoteType
+  commentId: T:CRMScript.NetServer.DocTmplQuoteType
   isExternal: true
-  name: quoteDocType
-  nameWithType: quoteDocType
-  fullName: CRMScript.NetServer.quoteDocType
+  name: DocTmplQuoteType
+  nameWithType: DocTmplQuoteType
+  fullName: CRMScript.NetServer.DocTmplQuoteType
 - uid: CRMScript.NetServer.NSDocumentTemplateEntity
   commentId: T:CRMScript.NetServer.NSDocumentTemplateEntity
   isExternal: true
   name: NSDocumentTemplateEntity
   nameWithType: NSDocumentTemplateEntity
   fullName: CRMScript.NetServer.NSDocumentTemplateEntity
-- uid: CRMScript.NetServer.invitationDocType
-  commentId: T:CRMScript.NetServer.invitationDocType
+- uid: CRMScript.NetServer.DocTmplInvitationType
+  commentId: T:CRMScript.NetServer.DocTmplInvitationType
   isExternal: true
-  name: invitationDocType
-  nameWithType: invitationDocType
-  fullName: CRMScript.NetServer.invitationDocType
-- uid: CRMScript.NetServer.privacyDocType
-  commentId: T:CRMScript.NetServer.privacyDocType
+  name: DocTmplInvitationType
+  nameWithType: DocTmplInvitationType
+  fullName: CRMScript.NetServer.DocTmplInvitationType
+- uid: CRMScript.NetServer.DocTmplPrivacyType
+  commentId: T:CRMScript.NetServer.DocTmplPrivacyType
   isExternal: true
-  name: privacyDocType
-  nameWithType: privacyDocType
-  fullName: CRMScript.NetServer.privacyDocType
-- uid: CRMScript.NetServer.senderEmailMode
-  commentId: T:CRMScript.NetServer.senderEmailMode
+  name: DocTmplPrivacyType
+  nameWithType: DocTmplPrivacyType
+  fullName: CRMScript.NetServer.DocTmplPrivacyType
+- uid: CRMScript.NetServer.SenderMailMode
+  commentId: T:CRMScript.NetServer.SenderMailMode
   isExternal: true
-  name: senderEmailMode
-  nameWithType: senderEmailMode
-  fullName: CRMScript.NetServer.senderEmailMode
+  name: SenderMailMode
+  nameWithType: SenderMailMode
+  fullName: CRMScript.NetServer.SenderMailMode
 - uid: CRMScript.NetServer.NSDSAParameters
   commentId: T:CRMScript.NetServer.NSDSAParameters
   isExternal: true
@@ -3419,2564 +3420,9 @@ references:
   name: NSWindowPosSize
   nameWithType: NSWindowPosSize
   fullName: CRMScript.NetServer.NSWindowPosSize
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+- uid: CRMScript.NetServer.ConfigType
+  commentId: T:CRMScript.NetServer.ConfigType
+  isExternal: true
+  name: ConfigType
+  nameWithType: ConfigType
+  fullName: CRMScript.NetServer.ConfigType
