--- a/docs/api-reference/toc.yml
+++ b/docs/api-reference/toc.yml
@@ -920,6 +920,8 @@ items:
       href: CRMScript.NetServer.colorIndex.yml
     - name: ContactAction
       href: CRMScript.NetServer.ContactAction.yml
+    - name: ConfigType
+      href: CRMScript.NetServer.ConfigType.yml
     - name: ContactSourceType
       href: CRMScript.NetServer.ContactSourceType.yml
     - name: Enum copyMembers
@@ -942,6 +944,14 @@ items:
       href: CRMScript.NetServer.destination.yml
     - name: Enum displayType
       href: CRMScript.NetServer.displayType.yml
+    - name: DocTmplInvitationType
+      href: CRMScript.NetServer.DocTmplInvitationType.yml
+    - name: DocTmplPrivacyType
+      href: CRMScript.NetServer.DocTmplPrivacyType.yml
+    - name: DocTmplQuoteType
+      href: CRMScript.NetServer.DocTmplQuoteType.yml
+    - name: DocumentLockSemantics
+      href: CRMScript.NetServer.DocumentLockSemantics.yml
     - name: Enum domain
       href: CRMScript.NetServer.domain.yml
     - name: Enum durationUnit
@@ -968,10 +978,8 @@ items:
       href: CRMScript.NetServer.fieldType.yml
     - name: Enum freeTextOperator
       href: CRMScript.NetServer.freeTextOperator.yml
-    - name: Enum generatorEncoding
-      href: CRMScript.NetServer.generatorEncoding.yml
-    - name: Enum invitationDocType
-      href: CRMScript.NetServer.invitationDocType.yml
+    - name: GeneratorEncoding
+      href: CRMScript.NetServer.GeneratorEncoding.yml
     - name: InvitationStatus
       href: CRMScript.NetServer.InvitationStatus.yml
     - name: Enum isIndexed
@@ -984,8 +992,6 @@ items:
       href: CRMScript.NetServer.level.yml
     - name: Enum LicenseStatus
       href: CRMScript.NetServer.LicenseStatus.yml
-    - name: Enum lockSemantics
-      href: CRMScript.NetServer.lockSemantics.yml
     - name: Enum mailMergeDeliveryType
       href: CRMScript.NetServer.mailMergeDeliveryType.yml
     - name: Enum maxLevel
@@ -1024,12 +1030,8 @@ items:
       href: CRMScript.NetServer.prefLevel.yml
     - name: Enum priority
       href: CRMScript.NetServer.priority.yml
-    - name: Enum privacyDocType
-      href: CRMScript.NetServer.privacyDocType.yml
     - name: Enum publishType
       href: CRMScript.NetServer.publishType.yml
-    - name: Enum quoteDocType
-      href: CRMScript.NetServer.quoteDocType.yml
     - name: Enum rankedFieldsIds
       href: CRMScript.NetServer.rankedFieldsIds.yml
     - name: Enum readStatus
@@ -1064,8 +1066,8 @@ items:
       href: CRMScript.NetServer.selectionType.yml
     - name: Enum selectionUnionType
       href: CRMScript.NetServer.selectionUnionType.yml
-    - name: Enum senderEmailMode
-      href: CRMScript.NetServer.senderEmailMode.yml
+    - name: SenderMailMode
+      href: CRMScript.NetServer.SenderMailMode.yml
     - name: Enum serverType
       href: CRMScript.NetServer.serverType.yml
     - name: ShowState
