--- a/docs/api-reference/CRMScript.NetServer.NSDocumentTemplate.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDocumentTemplate.yml
@@ -21,11 +21,11 @@ items:
   - CRMScript.NetServer.NSDocumentTemplate.SetAutoeventId(Integer)
   - CRMScript.NetServer.NSDocumentTemplate.SetDefaultOref(String)
   - CRMScript.NetServer.NSDocumentTemplate.SetDeleted(Integer)
-  - CRMScript.NetServer.NSDocumentTemplate.SetDirection(NSDocTmplDirection)
+  - CRMScript.NetServer.NSDocumentTemplate.SetDirection(Integer)
   - CRMScript.NetServer.NSDocumentTemplate.SetDocumentTemplateId(Integer)
   - CRMScript.NetServer.NSDocumentTemplate.SetFilename(String)
   - CRMScript.NetServer.NSDocumentTemplate.SetName(String)
-  - CRMScript.NetServer.NSDocumentTemplate.SetQuoteDocType(NSDocTmplQuoteType)
+  - CRMScript.NetServer.NSDocumentTemplate.SetQuoteDocType(Integer)
   - CRMScript.NetServer.NSDocumentTemplate.SetRecordType(NSDocTmplType)
   - CRMScript.NetServer.NSDocumentTemplate.SetSaveInDb(Integer)
   - CRMScript.NetServer.NSDocumentTemplate.SetTooltip(String)
@@ -120,16 +120,16 @@ items:
   nameWithType: NSDocumentTemplate.GetDirection()
   fullName: CRMScript.NetServer.NSDocumentTemplate.GetDirection()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = Incoming</li><li>Enum: 2 = Outgoing</li><li>Enum: 3 = SaintAll</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: NSDocTmplDirection GetDirection()
+    content: Integer GetDirection()
     parameters: []
     return:
-      type: CRMScript.NetServer.NSDocTmplDirection
-      description: 1 = incoming, 2 = outgoing, see EAppntDirection
+      type: CRMScript.Global.Integer
+      description: 1 = incoming, 2 = outgoing. See <xref href=\"TaskDirection\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
-  - "\n<pre><code>NSDocumentTemplate thing;\nNSDocTmplDirection direction = thing.GetDirection();</code></pre>\n"
+  - "\n<pre><code>NSDocumentTemplate thing;\nInteger direction = thing.GetDirection();</code></pre>\n"
 - uid: CRMScript.NetServer.NSDocumentTemplate.GetDocumentTemplateId()
   commentId: M:CRMScript.NetServer.NSDocumentTemplate.GetDocumentTemplateId()
   id: 'GetDocumentTemplateId()'
@@ -200,14 +200,14 @@ items:
   nameWithType: NSDocumentTemplate.GetQuoteDocType()
   fullName: CRMScript.NetServer.NSDocumentTemplate.GetQuoteDocType()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = None</li><li>Enum: 1 = MailBody</li><li>Enum: 2 = MainDocument</li><li>Enum: 3 = QuoteLines</li><li>Enum: 4 = ConfirmationMailBody</li><li>Enum: 5 = ConfirmationLines</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: NSDocTmplQuoteType GetQuoteDocType()
+    content: Integer GetQuoteDocType()
     parameters: []
     return:
-      type: CRMScript.NetServer.NSDocTmplQuoteType
-      description: What type of quote document is this?
+      type: CRMScript.Global.Integer
+      description: What type of quote document is this? See <xref href=\"DocTmplQuoteType\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSDocumentTemplate thing;\nNSDocTmplQuoteType quoteDocType = thing.GetQuoteDocType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSDocumentTemplate.GetRecordType()
@@ -336,28 +336,28 @@ items:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSDocumentTemplate thing;\nInteger deleted;\nthing.SetDeleted(deleted);</code></pre>\n"
-- uid: CRMScript.NetServer.NSDocumentTemplate.SetDirection(NSDocTmplDirection)
-  commentId: M:CRMScript.NetServer.NSDocumentTemplate.SetDirection(NSDocTmplDirection)
-  id: 'SetDirection(NSDocTmplDirection)'
+- uid: CRMScript.NetServer.NSDocumentTemplate.SetDirection(Integer)
+  commentId: M:CRMScript.NetServer.NSDocumentTemplate.SetDirection(Integer)
+  id: 'SetDirection(Integer)'
   so.intellisense: NSDocumentTemplate.SetDirection
   langs:
   - crmscript
-  name: 'SetDirection(NSDocTmplDirection)'
-  nameWithType: NSDocumentTemplate.SetDirection(NSDocTmplDirection)
-  fullName: CRMScript.NetServer.NSDocumentTemplate.SetDirection(NSDocTmplDirection)
+  name: 'SetDirection(Integer)'
+  nameWithType: NSDocumentTemplate.SetDirection(Integer)
+  fullName: CRMScript.NetServer.NSDocumentTemplate.SetDirection(Integer)
   type: Method
   summary: "\nSets the direction of a document template\n"
-  remarks: "\n<h3>Directions</h3><table><thead><tr><th>Enum</th><th>Direction</th><th>Description</th></tr></thead><tbody><tr><td>0</td><td>Unknown</td><td>The direction of documents from this template is unknown/undecided</td></tr><tr><td>1</td><td>Incoming</td><td>Document template for incoming documents</td></tr><tr><td>2</td><td>Outgoing</td><td>Document template is used for outgoing documents</td></tr><tr><td>3</td><td>SaintAll</td><td>All choice for Saint. This is NOT an acceptable value for a task definition, but is used by the Saint system for indexing all directions</td></tr></tbody></table><p>See EAppntDirection\n"
+  remarks: ""
   syntax: 
-    content: Void SetDirection()
+    content: Void SetDirection(Integer direction)
     parameters:
     - id: direction
-      type: CRMScript.NetServer.NSDocTmplDirection
-      description: The direction of documents from this template
+      type: CRMScript.Global.Integer
+      description: The direction of documents from this template. See <xref href=\"TaskDirection\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
-  - "\n<pre><code>NSDocumentTemplate thing;\nNSDocTmplDirection direction;\nthing.SetDirection(direction);</code></pre>\n"
+  - "\n<pre><code>NSDocumentTemplate thing;\nInteger direction;\nthing.SetDirection(direction);</code></pre>\n"
 - uid: CRMScript.NetServer.NSDocumentTemplate.SetDocumentTemplateId(Integer)
   commentId: M:CRMScript.NetServer.NSDocumentTemplate.SetDocumentTemplateId(Integer)
   id: 'SetDocumentTemplateId(Integer)'
@@ -424,28 +424,28 @@ items:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSDocumentTemplate thing;\nString name;\nthing.SetName(name);</code></pre>\n"
-- uid: CRMScript.NetServer.NSDocumentTemplate.SetQuoteDocType(NSDocTmplQuoteType)
-  commentId: M:CRMScript.NetServer.NSDocumentTemplate.SetQuoteDocType(NSDocTmplQuoteType)
-  id: 'SetQuoteDocType(NSDocTmplQuoteType)'
+- uid: CRMScript.NetServer.NSDocumentTemplate.SetQuoteDocType(Integer)
+  commentId: M:CRMScript.NetServer.NSDocumentTemplate.SetQuoteDocType(Integer)
+  id: 'SetQuoteDocType(Integer)'
   so.intellisense: NSDocumentTemplate.SetQuoteDocType
   langs:
   - crmscript
-  name: 'SetQuoteDocType(NSDocTmplQuoteType)'
-  nameWithType: NSDocumentTemplate.SetQuoteDocType(NSDocTmplQuoteType)
-  fullName: CRMScript.NetServer.NSDocumentTemplate.SetQuoteDocType(NSDocTmplQuoteType)
+  name: 'SetQuoteDocType(Integer)'
+  nameWithType: NSDocumentTemplate.SetQuoteDocType(Integer)
+  fullName: CRMScript.NetServer.NSDocumentTemplate.SetQuoteDocType(Integer)
   type: Method
   summary: ""
   remarks: ""
   syntax: 
-    content: Void SetQuoteDocType(NSDocTmplQuoteType quoteDocType)
+    content: Void SetQuoteDocType(Integer quoteDocType)
     parameters:
     - id: quoteDocType
-      type: CRMScript.NetServer.NSDocTmplQuoteType
-      description: What type of quote document is this? See enum quoteDocType.
+      type: CRMScript.Global.Integer
+      description: What type of quote document is this? See <xref href=\"DocTmplQuoteType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
-  - "\n<pre><code>NSDocumentTemplate thing;\nNSDocTmplQuoteType quoteDocType;\nthing.SetQuoteDocType(quoteDocType);</code></pre>\n"
+  - "\n<pre><code>NSDocumentTemplate thing;\nInteger quoteDocType;\nthing.SetQuoteDocType(quoteDocType);</code></pre>\n"
 - uid: CRMScript.NetServer.NSDocumentTemplate.SetRecordType(NSDocTmplType)
   commentId: M:CRMScript.NetServer.NSDocumentTemplate.SetRecordType(NSDocTmplType)
   id: 'SetRecordType(NSDocTmplType)'
@@ -530,18 +530,6 @@ references:
   name: String
   nameWithType: String
   fullName: CRMScript.Global.String
-- uid: CRMScript.NetServer.NSDocTmplDirection
-  commentId: T:CRMScript.NetServer.NSDocTmplDirection
-  isExternal: true
-  name: NSDocTmplDirection
-  nameWithType: NSDocTmplDirection
-  fullName: CRMScript.NetServer.NSDocTmplDirection
-- uid: CRMScript.NetServer.NSDocTmplQuoteType
-  commentId: T:CRMScript.NetServer.NSDocTmplQuoteType
-  isExternal: true
-  name: NSDocTmplQuoteType
-  nameWithType: NSDocTmplQuoteType
-  fullName: CRMScript.NetServer.NSDocTmplQuoteType
 - uid: CRMScript.NetServer.NSDocTmplType
   commentId: T:CRMScript.NetServer.NSDocTmplType
   isExternal: true
@@ -560,3 +548,15 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.DocTmplQuoteType
+  commentId: T:CRMScript.NetServer.DocTmplQuoteType
+  isExternal: true
+  name: DocTmplQuoteType
+  nameWithType: DocTmplQuoteType
+  fullName: CRMScript.NetServer.DocTmplQuoteType
+- uid: CRMScript.NetServer.TaskDirection
+  commentId: T:CRMScript.NetServer.TaskDirection
+  isExternal: true
+  name: TaskDirection
+  nameWithType: TaskDirection
+  fullName: CRMScript.NetServer.TaskDirection
