--- a/docs/api-reference/CRMScript.NetServer.NSTemplateVariablesParameters.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTemplateVariablesParameters.yml
@@ -189,13 +189,13 @@ items:
   fullName: CRMScript.NetServer.NSTemplateVariablesParameters.GetEncoding()
   type: Method
   summary: ""
-  remarks: 
+  remarks: "\nNon-text formats such as MsWord or Excel should be Base64 encoded in the source string.\n"
   syntax: 
     content: Integer GetEncoding()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Encoding of source string. Non-text formats such as MsWord or Excel should be Base64 encoded in the source string.
+      description: Encoding of source string. See <xref href=\"GeneratorEncoding\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSTemplateVariablesParameters thing;\nInteger encoding = thing.GetEncoding();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTemplateVariablesParameters.GetPersonId()
@@ -501,13 +501,13 @@ items:
   fullName: CRMScript.NetServer.NSTemplateVariablesParameters.SetEncoding(Integer)
   type: Method
   summary: 
-  remarks: 
+  remarks: "\nNon-text formats such as MsWord or Excel should be Base64 encoded in the source string.\n"
   syntax: 
     content: Void SetEncoding(Integer encoding)
     parameters:
     - id: encoding
       type: CRMScript.Global.Integer
-      description: Encoding of source string. Non-text formats such as MsWord or Excel should be Base64 encoded in the source string. See enum generatorEncoding.
+      description: Encoding of source string. See <xref href=\"GeneratorEncoding\" data-throw-if-not-resolved=\"false\"></xref>
     return: 
       type: CRMScript.Global.Void
   example: 
@@ -739,3 +739,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.GeneratorEncoding
+  commentId: T:CRMScript.NetServer.GeneratorEncoding
+  isExternal: true
+  name: GeneratorEncoding
+  nameWithType: GeneratorEncoding
+  fullName: CRMScript.NetServer.GeneratorEncoding
